user now alerted when book is uploaded

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="price">price</string>
     <string name="edition">edition</string>
     <string name="take_picture">take picture</string>
+    <string name="book_saved">Book uploaded successfully</string>
 
     <!-- SignIn Screen -->
     <string name="fb_login">Login with Facebook</string>
