--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <!-- Action Buttons -->
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
+    <string name="action_refresh">Refresh</string>
 
     <!-- Book cell labels -->
     <string name="default_price">$--.--</string>
