added string for FB login button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="book_saved">Book uploaded successfully</string>
 
     <!-- SignIn Screen -->
+    <string name="fb_login">Login with Facebook</string>
     <string name="null_user">Login failed</string>
     <string name="sign_in_error">error signing in</string>
 
