changed name from TextRack to CourseBack

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TextRack</string>
+    <string name="app_name">CourseBack</string>
     <string name="title_activity_settings">Sign In</string>
 
     <!-- Resource Keys -->
