added string-arrays for new Spinners in AddBook dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,10 +20,22 @@
     <string name="add_book">Add Book</string>
     <string name="title">title</string>
     <string name="isbn">isbn</string>
-    <string name="course">course</string>
     <string name="price">price</string>
     <string name="edition">edition</string>
-    <string name="take_picture">take picture</string>
+    <string name="condition">condition</string>
+    <string name="annotation">level of annotation</string>
+    <string-array name="conditions_array">
+        <item>New</item>
+        <item>Good</item>
+        <item>Fair</item>
+        <item>Poor</item>
+    </string-array>
+    <string-array name="annotations_array">
+        <item>Heavy</item>
+        <item>Medium</item>
+        <item>Light</item>
+        <item>None</item>
+    </string-array>
     <string name="book_saved">Book uploaded successfully</string>
     <string name="book_failure">Failed to upload book</string>
 
